# DarkLoadLibrary

./: .gitignore  CMakeLists.txt  DarkLoadLibrary.vcxproj  DarkLoadLibrary.vcxproj.filters  README.md  darkloadlibrary.c  darkloadlibrary.h  ldrutils.h  pebstructs.h
DarkLoadLibrary/: DarkLoadLibrary.sln  DarkLoadLibrary.vcxproj  DarkLoadLibrary.vcxproj.filters
DarkLoadLibrary/include/: darkloadlibrary.h  darkmodule.h  ldrutils.h  pebutils.h  syscalls.h
DarkLoadLibrary/src/: darkloadlibrary.c  ldrutils.c  main.c  pebutils.c  syscalls.c  syscallsstubs.asm
Debug/: DarkLoadLibrary.exe.recipe  DarkLoadLibrary.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/DarkLoadLibrary.tlog/: DarkLoadLibrary.lastbuildstate
example/: main.c
include/: darkloadlibrary
src/: darkloadlibrary.c  ldrutils.h  pebstructs.h  pebutils.h
tests/: CMakeLists.txt  main.c
x64/Debug/: DarkLoadLibrary.exe.recipe  DarkLoadLibrary.ilk  DarkLoadLibrary.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/DarkLoadLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DarkLoadLibrary.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: DarkLoadLibrary.exe.recipe  DarkLoadLibrary.iobj  DarkLoadLibrary.ipdb  DarkLoadLibrary.vcxproj.FileListAbsolute.txt
x64/Release/DarkLoadLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DarkLoadLibrary.lastbuildstate  DarkLoadLibrary.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
